Fix picture size on mobile

--- a/css/phms.css
+++ b/css/phms.css
@@ -145,6 +145,11 @@ footer {
   font-size: 1.4em;
   text-align: center;
 }
+#about img {
+  max-width: 300px;
+  width: 40%;
+  margin: 1em;
+}
 nav {
   height: 60px;
   align-items: center;
