--- a/less/modules.less
+++ b/less/modules.less
@@ -32,6 +32,14 @@
   }
 }
 
+#about {
+  img {
+    max-width: 300px;
+    width: 40%;
+    margin: 1em;
+  }
+}
+
 nav {
   height: 60px;
   align-items: center;
